# burdoc

./: .gitignore  .pylintrc  .readthedocs.yaml  LICENSE  README.md  aggregator_processor.py  pymupdf_test.ipynb  pyproject.toml
.github/workflows/: build-release.yml  pylint.yml  python-package.yml
burdoc/: __init__.py  burdoc_parser.py
burdoc/elements/: __init__.py  bbox.py  content_objects.py  drawing.py  element.py  font.py  image.py  layout_objects.py  line.py  section.py  span.py  table.py  textblock.py  textlist.py
burdoc/pdf_handlers/: drawing_handler.py  image_handler.py  text_handler.py
burdoc/processors/: __init__.py  aggregator_processor.py  content_processor.py  json_out_processor.py  layout_processor.py  margin_processor.py  ml_table_processor.py  pdf_load_processor.py  processor.py  reading_order_processor.py  rules_table_processor.py
burdoc/processors/pdf_load_processor/: __init__.py  drawing_handler.py  image_handler.py  pdf_load_processor.py  text_handler.py
burdoc/processors/table_processors/: __init__.py  detr_table_strategy.py  ml_table_processor.py  rules_table_processor.py  table_extractor_strategy.py
burdoc/scripts/: burdoc.py
burdoc/table_strategies/: detr_table_strategy.py  table_extractor_strategy.py
burdoc/utils/: compare.py  image_manip.py  layout_graph.py  logging.py  render_pages.py
docs/: burdoc.html  index.html  search.js
docs/burdoc/: burdoc_parser.html  elements.html  pdf_handlers.html  processors.html  scripts.html  table_strategies.html  utils.html
docs/burdoc/elements/: aside.html  bbox.html  drawing.html  element.html  font.html  image.html  line.html  section.html  span.html  table.html  textblock.html  textlist.html
docs/burdoc/pdf_handlers/: drawing_handler.html  image_handler.html  text_handler.html
docs/burdoc/processors/: aggregator_processor.html  content_processor.html  json_out_processor.html  layout_processor.html  margin_processor.html  ml_table_processor.html  pdf_load_processor.html  processor.html  table_processors.html  (+2 more)
docs/source/: conf.py  getting_started.md  index.md  output.md
examples/: read_file_as_text.py
scripts/: compare_output.py  explore_test_results.py  json_to_html.py  run_validation_tests.py
src/: bbox.py  burdoc.py  burdoc_parser.py  content_objects.py  content_parser.py  detr_table_extractor.py  drawing_handler.py  image_handler.py  layout_builder.py  layout_graph.py  layout_objects.py  pdf_reader.py  rules_table_extractor.py  table_generator.py  text_handler.py
src/burdoc/: __init__.py  burdoc_parser.py
src/elements/: bbox.py  content_objects.py  element.py  font.py  layout_objects.py  section.py  span.py  table.py  textblock.py
src/pdf_handlers/: drawing_handler.py  image_handler.py  text_handler.py
src/processors/: aggregator_processor.py  content_parser.py  content_processor.py  json_out_processor.py  layout_processor.py  margin_processor.py  ml_table_processor.py  pdf_load_processor.py  processor.py  reading_order_processor.py  rules_table_processor.py  threadable_processor.py
src/table_strategies/: detr_table_strategy.py  rules_table_strategy.py  table_extractor_strategy.py
src/utils/: layout_graph.py  render_pages.py
tests/: test_bbox.py  test_line.py  test_span.py
tests/elements/: test_bbox.py
tests/integration/: run_integration_tests.py
tests/unit/: conftest.py  test_burdoc.py
(+155 files in other folders)
