[build-system]
requires=["setuptools"]
build-backend="setuptools.build_meta"

[project]
name="burdoc"
version="0.1.0"
authors= [ {name="jennis0"} ]
description="Advanced PDF parsing for python"
readme="README.md"
requires-python=">3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "logger_tt>=1.7",
    "numpy>=1.24",
    "Pillow>=9.4",
    "plotly>=5.12",
    "PyMuPDF>=1.21",
    "scipy>=1.10",
    "pandas>=1.5"
]

[tool.setuptools]
packages=["burdoc"]

[project.scripts]
burdoc="burdoc.scripts.burdoc:run"

[project.optional-dependencies]
transformers=["torch>=1.13","transformers>=4.26"]
dev=["pdoc>=13.0","pytest>=7.2.2","pylint>=2.17","pytest-cov>4.0"]

[project.urls]
"Homepage" = "https://github.com/jennis0/burdoc"
"Bug Tracker" = "https://github.com/jennis0/burdoc/issues"

