[build-system]
requires=["setuptools"]
build-backend="setuptools.build_meta"

[project]
name="burdoc"
version="0.1.0"
authors= [ {name="jennis0"} ]
description="Advanced PDF parsing for python"
readme="README.md"
requires-python=">3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "logger_tt>=1.7",
    "numpy>=1.24",
    "Pillow>=9.4",
    "plotly>=5.12",
    "PyMuPDF>=1.21",
    "scipy>=1.10",
    "pandas>=1.5",
    "torchvision>=0.14",
    "transformers>=4.26",
    "timm>=0.6.13"
]

[project.scripts]
burdoc="burdoc.scripts.burdoc:run"

[project.optional-dependencies]
dev=["pytest>=7.2.2","pylint>=2.17","pytest-cov>=4.0", "mypy", "pylint_pytest"
    "sphinx==6.1.3", "sphinx_rtd_theme", "enum_tools", "myst_parser"]
    
[project.urls]
"Homepage" = "https://github.com/jennis0/burdoc"
"Bug Tracker" = "https://github.com/jennis0/burdoc/issues"
