[build-system]
requires=["setuptools>=45", "setuptools_scm[toml]>=6.2"]
build-backend="setuptools.build_meta"

[project]
name="burdoc"
dynamic=["version"]
authors= [ {name="jennis0"} ]
description="Advanced PDF parsing for python"
readme="README.md"  
requires-python=">=3.8"
classifiers = [
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Text Processing :: General",
    "Topic :: Text Processing :: Markup :: HTML"
]
dependencies = [
    "logger_tt>=1.7",
    "numpy>=1.24",
    "Pillow>=9.4",
    "plotly>=5.12",
    "PyMuPDF>=1.21",
    "scipy>=1.10",
    "pandas>=1.5",
    "torchvision>=0.14",
    "transformers>=4.26",
    "timm>=0.6.13",
    "roman>=4.0"
]

[tool.setuptools_scm]

[project.scripts]
burdoc="burdoc.scripts.burdoc:run"

[project.optional-dependencies]
dev=["pytest>=7.2.2","pylint>=2.17","pytest-cov>=4.0", "mypy", "pylint_pytest",
    "sphinx==6.1.3", "sphinx_rtd_theme", "enum_tools[sphinx]", "myst_parser",
    "build", "twine"]

[project.urls]
"Homepage" = "https://github.com/jennis0/burdoc"
"Bug Tracker" = "https://github.com/jennis0/burdoc/issues"
